--- a/.github/workflows/freeza.yaml
+++ b/.github/workflows/freeza.yaml
@@ -2,42 +2,25 @@ name: CI
 on:
   push:
     branches: 
-    - main:
+    - main
 
 jobs:
   backend:
     runs-on: ubuntu-latest
     steps:
+        - name: get_code
+          uses: actions/checkout@v4
+          
         - name: Create env
           env:
             ENV: ${{ secrets.BACKEND }}
           run: echo $ENV>.env
-    
-        - name: get_code
-          uses: actions/checkout@v4
           
         - name: Run a one-line script
-        ` run: docker build -t freeza .
+          run: docker build -t freeza .
 
         - name: Run a multi-line script
           run: |
               docker run -p 3000:80 freeza:latest
 
-  frontend:
-    runs-on: ubuntu-latest
-    needs: backend
-    steps:
-        - name: Create env
-          env:
-            ENV: ${{ secrets.FRONTEND }}
-          run: echo $ENV>.env
-    
-        - name: get_code
-          uses: actions/checkout@v4
-          
-        - name: Run a one-line script
-        ` run: docker build . t freeza .
-
-        - name: Run a multi-line script
-          run: |
-              docker run -p 3000:80 freeza:latest
+  
